handle issue with horizontal scrolling on mobile

--- a/tiedwidjes/style.css
+++ b/tiedwidjes/style.css
@@ -146,6 +146,7 @@
 body {
     font-family: 'Averia Serif Libre', cursive;
     color: #444;
+    overflow: hidden;
 }
 
 #extra {
